# NeoFlow

./: .env.example  .firebaserc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  firebase.json  firestore.rules  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
components/: analytics-page.tsx  auth-gate.tsx  calendar-view.tsx  countdown-display.tsx  currency-symbol.tsx  dashboard.tsx  finance-page.tsx  firebase-auth-modal.tsx  glass-card.tsx  history-page.tsx  image-picker.tsx  pdf-print-export.tsx  plans-page.tsx  pomodoro-timer.tsx  precise-datetime-picker.tsx  progress-ring.tsx  quick-command-palette.tsx  savings-simulator.tsx  sidebar.tsx  smart-focus-engine.tsx  tasks-page.tsx  transaction-ledger.tsx  workspace-backup.tsx
cpp/: CMakeLists.txt  Makefile  build.bat  build.sh
cpp/include/: ai_copilot_engine.hpp  analytics_engine.hpp
cpp/src/: ai_copilot_engine.cpp  analytics_engine.cpp  main.cpp
hooks/: use-countdown.ts
lib/: countdown.ts  cpp-engine-adapter.ts  crypto-vault.ts  firebase.ts  gemini-ai.ts  store.tsx  types.ts
public/: robots.txt  sitemap.xml
scripts/: copilot_brain.py
